--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=SpringBoot_FW10
+server.port=9000
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot10?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=11021990
